Fix header height, now more stable on smallscreens

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -93,17 +93,17 @@ hr {
 .content {
   padding: 20px;  
   background-color: #fefee6;
-  height: 92vh;
+  height: calc(100vh - 40px);
   color: #444;
 }
 @media (min-width: 768px) {
   .content {
-    height: 95vh;
+ 
   }
 }
 #map {
   width: 100%;
-  height: 95vh;
+  height: calc(100vh - 40px);
   font-family: unset;
   background-color: #222;
   background-color: #888;
